# esp-mqtt

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/pmsx003/: idf-pmsx003.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main_backup.c  dht11.c  dht11.h  display_log.c  display_log.h  embedded_html.h  idf_component.yml  u8g2_esp32_hal.c
main/tools/: embed_html.py
main/www/: index.html
mosquitto/: README.md  mosquitto.conf  test_web.html
